# solarpanelreq

./: .env.sample  Cargo.toml
src/: db.rs  main.rs  util.rs
src/solax/: api.rs  mod.rs  model.rs
src/wattanalytics/: api.rs  mod.rs  model.rs
