[package]
name = "solarpanelreq"
version = "0.1.0"
authors = ["Timotej Leginus <timko@leginus.sk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.58"
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.10", features = ["json"] }
mysql = { version = "22.2.0" }
openssl = { version = "*", features = ["vendored"] }
chrono = "0.4"
serde = { version =  "*", features = ["derive"] }